Changes since labca_3_5_0:
Changes since labca_3_4_2:
	2015/09/08 (TS):
	 - replaced #include <tsDefs.h> by <epicsTime.h>
	 - replaced obsolete TS_STAMP by epicsTimeStamp (TS_STAMP is a macro
	   for the latter under reasonably recent base)
	2015/06/04 (TS):
	 - RENAMED lcaGetEnumStates -> lcaGetEnumStrings
	2015/06/04 (TS):
	 - matlab/lcaGetEnumStates.c, matlab/Makefile: added lcaGetEnumStates()
	 - matlab/lcaDebugOn.c, matlab/lcaDebugOff.c, matlab/Makefile: added
	   lcaDebugOn()/lcaDebugOff().
	 - ezca/ezca.c, ezca/ezca.h: added ezcaGetEnumStates()
	 - glue/labca.sce.in, glue/ezcaSciInt.c: changed names from ezca->labca.
	   Added helper to unload labca. Added lcaGetEnumStates()
	 - testing/lcaTest.sce, testing/lcaTest.m: added tests for lcaGetEnumStates()
	2015/06/03 (TS):
	- Reorganized ezcaGetPrecision(), ezcaGetUnits(), ezcaGetNelem(),
	  ezcaGetStatus(), getLimits() (which is now getInfo()) to share
	  more code and eliminate duplication (of which there is still
	  plenty).
	- added compile-time test to check consistency between CA size 
	  macros and EZCA's
Changes since labca_3_4_1:
	2015/03/12 (TS):
	- Added top-level rule to uninstall everything but documentation (for
	  prep. of distribution tarball).
	- Silenced compiler warnings (changed format string arg of lcaSetError()
	  to 'const char*')
	- Applied fixes for matlab 2014a contributed by Matthew Furseman.
Changes since labca_3_4:
	2013/06/25 (TS):
	- FIXED: build problems due to changed scilab libraries when going
	  from scilab-5.3 to 5.4. Thanks to Takashi Obina for reporting and
	  suggesting a fix.
	- documentation/xmlhelp/en_US/Error.xml no longer passed through
	  xml_to_jar. Removed <titleabbrev> and replaced <thead> by <th>.
Changes since labca_3_3:
	2012/01/13 (TS):
	- glue/ezcaSciInt.c: removed epicsShareAPI for C2F(ezca). This caused
	  a leading underscore (when building w/o .def file as we now do) which
	  is not understood by scilab's addinter.